# FunWithSDL

./: CMakeLists.txt  main.cpp  nResources.h  nUtil.h
Classes/: Camera.cpp  Camera.h  MapManager.cpp  MapManager.h
Classes/include/: AnimatedSprite.h  BoxCollider2D.h  CollisionHelper.h  CollisionManager.h  EntityManager.h  GameEntity.h  ResourceManager.h  SDLApp.h  Sound.h  Sprite.h  Text.h  Tilemap.h  Vector2.h
Classes/src/: AnimatedSprite.cpp  BoxCollider2D.cpp  CollisionManager.cpp  EntityManager.cpp  GameEntity.cpp  ResourceManager.cpp  SDLApp.cpp  Sound.cpp  Sprite.cpp  Text.cpp  Tilemap.cpp  Vector2.cpp
Examples/: DrawAnimatedSprite.h  DrawImGui.h  DrawImageFormats.h  DrawOnWindow.h  DrawPongGame.h  DrawRectangleCollisions.h  DrawStuffWithTiles.h  DrawTTFs.h  DrawTileMap.h  DrawWithBlender.h  DrawWithColorKey.h  DrawWithShapes.h  DrawWithTextureRect.h  Example_TexturedRectangles.h  Example_WaterEffects.h  bin
imgui/backends/: imgui_impl_sdl2.h  imgui_impl_sdlrenderer2.h
